--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,13 +4,14 @@
  ******************************************************************************/
 
 @use "sass:color";
-
 // Colors
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
 $blue-color: #0076df !default;
 $blue-color-dark: #00369f !default;
+$bluec: #0F0FCD !default;
+
 $cyan-color: #2698ba !default;
 $light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
 $green-color: #00ab37 !default;
